--- a/packages/jukboks-frontend/public/index.html
+++ b/packages/jukboks-frontend/public/index.html
@@ -1,17 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-	<meta charset='utf-8'>
-	<meta name='viewport' content='width=device-width,initial-scale=1'>
-
-	<title>Svelte app</title>
-
-	<link rel='icon' type='image/png' href='/favicon.png'>
-	<link rel='stylesheet' href='/build/bundle.css'>
-
-	<script defer src='/build/bundle.js'></script>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>jukboks</title>
 </head>
 
 <body>
+    <!--This is the node that svelte is going to take to make the magic-->
+    <div id="root"></div>
 </body>
+
 </html>
